--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -10,6 +10,7 @@
     <main class="l-main__main">
         {{> body}}
         {{> o-newsletter}}
+        {{> a-scroll-top}}
     </main>
     {{> footer}}
     {{> scripts}}
