--- a/src/assets/scss/base/reset.scss
+++ b/src/assets/scss/base/reset.scss
@@ -11,6 +11,7 @@ body{
   font-size: $base-font-size;
   line-height: $base-line-height;
   font-family: $base-font-family;
+  height: 100%;
 }
 
 h1,h2,h3,h4,h5,h6,p,a,span{
