--- a/src/partials/commons/header.html
+++ b/src/partials/commons/header.html
@@ -8,6 +8,9 @@
     <!--  Desktop Navigation -->
     <nav class="o-header__nav">
         <ul>
+            <li id="favorites" class="o-header__nav-item o-header__nav-item--fav">
+                <a href="#" class="o-header__nav-link js-modal" data-modal="#modal">Favoritos</a>
+            </li>
             <li class="o-header__nav-item">
                 <a href="#" class="o-header__nav-link">Destinos</a>
             </li>
