--- a/src/assets/scss/atomic/atoms/_glob.scss
+++ b/src/assets/scss/atomic/atoms/_glob.scss
@@ -1,3 +1,6 @@
+@import "color/a-color";
+@import "background/a-bg";
+@import "gradient/a-gradient";
 @import "button/a-button";
 @import "fav/a-fav";
 @import "icon/a-icon";
