--- a/src/assets/scss/atomic/organisms/_glob.scss
+++ b/src/assets/scss/atomic/organisms/_glob.scss
@@ -5,3 +5,4 @@
 @import "footer/o-footer";
 @import "newsletter/o-newsletter";
 @import "itinerary/o-itinerary";
+@import "comparative/o-comparative";
