--- a/src/partials/components/atoms/typo/a-typo.html
+++ b/src/partials/components/atoms/typo/a-typo.html
@@ -1,3 +1,3 @@
-<{{tag}} class="{{class}}">
+<{{#if tag}}{{tag}}{{else}}p{{/if}} class="{{class}}">
     {{text}}
-</{{tag}}>
+</{{#if tag}}{{tag}}{{else}}p{{/if}}>
