--- a/src/partials/components/organisms/itinerary/o-itinerary.html
+++ b/src/partials/components/organisms/itinerary/o-itinerary.html
@@ -1,7 +1,7 @@
 <section class="o-itinerary u-mv-64">
     <div class="o-itinerary__heading">
         <div class="m-heading m-heading--center">
-            <h3 class="m-heading__title a-typo-pascal u-color-mustard">Itinerario</h3>
+            <h3 class="m-heading__title a-typo-pascal a-color-mustard">Itinerario</h3>
             <h6 class="m-heading__subtitle">Nuestro wäytrip favorito</h6>
         </div>
     </div>
