--- a/src/partials/commons/scripts.html
+++ b/src/partials/commons/scripts.html
@@ -1,1 +1,3 @@
-<script defer src="{{root}}assets/javascript/bundle.js"></script>
+<script defer src="https://d1hkxmgwhmmdhs.cloudfront.net/dist/assets/img/iberojet/black-friday-2018/bundle.js"></script>
+<script src="https://d1hkxmgwhmmdhs.cloudfront.net/dist/assets/js/gtm/analyticscore.bundle.js"></script>
+
