--- a/src/assets/scss/base/reset.scss
+++ b/src/assets/scss/base/reset.scss
@@ -9,9 +9,8 @@
 
 body{
   font-size: $base-font-size;
-  line-height: $base-line-height;
   font-family: $base-font-family;
-  height: 100%;
+  line-height: 0;
 }
 
 h1,h2,h3,h4,h5,h6,p,a,span{
